fix dark mode visual, fix button action interactable

--- a/src/components/blocks/shared/SelectionCard.module.css
+++ b/src/components/blocks/shared/SelectionCard.module.css
@@ -113,11 +113,12 @@
 .selectionCardMainMenu::after {
   content: "";
   position: absolute;
-  top: 0px;
+  top: 10px;
   right: 0px;
   height: 60px;
-  width: 50px;
+  width: 60px;
   z-index: -1;
+  transform: rotate(10deg);
 }
 
 /* Main Menu Button */
@@ -243,6 +244,7 @@
   border-radius: inherit;
   opacity: 0;
   transition: opacity var(--transition-fast);
+  z-index: -1; /* keep to allow action clicks */
 }
 
 .menuActionsItem:hover::before {
